--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-google": "^0.14.0"
   },
   "dependencies": {
+    "cron": "^1.8.2",
     "discord.js": "^12.4.1",
     "node-cron": "^3.0.0",
     "puppeteer": "^5.4.1",
